--- a/UltSigPro/build.gradle
+++ b/UltSigPro/build.gradle
@@ -10,10 +10,14 @@
 apply plugin: 'java-library'
 
 // In this section you declare where to find the dependencies of your project
-repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+allprojects {
+	repositories {
+	    // Use jcenter for resolving your dependencies.
+	    // You can declare any Maven/Ivy/file repository here.
+	    jcenter()
+	    
+	    maven { url "https://jitpack.io" }
+	}
 }
 
 dependencies {
@@ -25,5 +29,9 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+	compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
+	
+	compile group: 'com.github.RolandMueller1994', name: 'commonjavaframework', version: '0.2.+'
 }
 
