--- a/UltSigPro/build.gradle
+++ b/UltSigPro/build.gradle
@@ -6,6 +6,7 @@
  * user guide available at https://docs.gradle.org/3.5/userguide/java_library_plugin.html
  */
 
+
 buildscript {
     dependencies {
         classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
@@ -16,6 +17,7 @@ buildscript {
     }
 }
 
+
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library'
 
@@ -25,8 +27,6 @@ allprojects {
 	    // Use jcenter for resolving your dependencies.
 	    // You can declare any Maven/Ivy/file repository here.
 	    jcenter()
-	    mavenLocal()
-	    mavenCentral()
 	    
 	    maven { url "https://jitpack.io" }
 	}
@@ -46,17 +46,10 @@ dependencies {
 	
 	compile group: 'com.github.RolandMueller1994', name: 'commonjavaframework', version: '0.2.7'
 
+	compile group: 'com.github.RolandMueller1994', name: 'commonjavaframework', version: 'a78627f'
+
 	// https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit
-	//compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.8.0.201706111038-r'	
-}
-
-apply plugin: 'javafx-gradle-plugin'
-
-jfx {
-    // minimal requirement for jfxJar-task
-    mainClass = 'main.USPMain'
-    
-    // minimal requirement for jfxNative-task
-    vendor = 'roland'
+	//compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.8.0.201706111038-r'
+	
 }
 
