--- a/UltSigPro/build.gradle
+++ b/UltSigPro/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     
 	compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
 
-	compile group: 'com.github.RolandMueller1994', name: 'commonjavaframework', version: '0.2.12'
+	compile group: 'com.github.RolandMueller1994', name: 'commonjavaframework', version: '-SNAPSHOT'
 
 	// https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit
 	//compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.8.0.201706111038-r'
