--- a/UltSigPro/build.gradle
+++ b/UltSigPro/build.gradle
@@ -44,7 +44,9 @@ dependencies {
     
 	compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
 
-	compile group: 'com.github.RolandMueller1994', name: 'commonjavaframework', version: 'bd1a348c27'
+	compile group: 'com.github.RolandMueller1994', name: 'commonjavaframework', version: '02af78e801'
+	
+	compile group: 'com.github.RolandMueller1994', name: 'javasignalprocessingtools', version: '9c7d569501'
 
 	// https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit
 	//compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.8.0.201706111038-r'
