--- a/UltSigPro/build.gradle
+++ b/UltSigPro/build.gradle
@@ -45,7 +45,8 @@ dependencies {
 	compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
 
 	compile group: 'com.github.RolandMueller1994', name: 'commonjavaframework', version: '7cf24785b8'
-
+	compile group: 'com.github.RolandMueller1994', name: 'javasignalprocessingtools', version: '9ea139a326'
+	
 	// https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit
 	//compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '4.8.0.201706111038-r'
 	
