Unstable jitpack problems

--- a/UltSigPro/build.gradle
+++ b/UltSigPro/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     
 	compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
 
-	compile group: 'com.github.RolandMueller1994', name: 'commonjavaframework', version: '96c92c37ab'
+	compile 'com.github.RolandMueller1994:commonjavaframework:1.0.1'
 	compile group: 'com.github.RolandMueller1994', name: 'javasignalprocessingtools', version: '9ea139a326'
 	
 
