--- a/UltSigPro/gradle/wrapper/gradle-wrapper.properties
+++ b/UltSigPro/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Jun 13 21:43:55 CEST 2017
+#Tue Dec 19 13:15:43 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
